[package]
name = "rust_iso4217"
version = "0.1.3"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description="ISO 4217 is a standard published by the International Organization for Standardization (ISO) that defines alpha codes and numeric codes for the representation of currencies and provides information about the relationships between individual currencies and their minor units."
repository="https://github.com/rust-iso/rust_iso4217"
license="Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["scripts/*"]
documentation = "https://docs.rs/rust_iso4217/"


keywords=[ "iso4217","4217","currency"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = { version = "^0.14.0", features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2.100"
js-sys = "^0.3.77"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3.50"
